--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 
 <body>
 
+  <h1 data-testid="slackUserName">Kingsley Oghualan</h1>
   <div>
-    <h1 data-testid="slackUserName">Kingsley Oghualan</h1>
     <img class="image" src="image.jpeg" alt="Kingsley Oghualan" data-testid="slackDisplayImage">
-
-    <h2 data-testid="currentDayOfTheWeek" id="currentDay"></h2>
-
-    <h2 data-testid="currentUTCTime" id="currentUTCTime"></h2>
-
-    <h2 data-testid="myTrack">Frontend</h2>
-    <h2>
-      <a href="https://github.com/oghuanlan-kingsley" data-testid="githubURL">GitHub Repository</a>
-    </h2>
-
-
   </div>
+  <h2 data-testid="currentDayOfTheWeek"></h2>
+
+  <h2 data-testid="currentUTCTime"></h2>
+
+  <h2 data-testid="myTrack">Frontend</h2>
+  <div>
+    <a href="https://github.com/oghuanlan-kingsley/web-page" data-testid="githubURL">GitHub Repository</a>
+  </div>
+
+
+
   <script src="script.js"></script>
 
 </body>
